Quick last change. GitIgnore should be fine now

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ GolfingStats/GolfingStats.Android/obj/
 GolfingStats/GolfingStats.Android/bin/
 GolfingStats/GolfingStats.UWP/obj/
 GolfingStats/GolfingStats.UWP/bin/
-GolfingStats/GolfingStats.iOS/bin/
+GolfingStats/GolfingStats.iOS/obj/
 GolfingStats/GolfingStats.iOS/bin/
