Last change to GtiIgnore (Hopefully) Deleted ShotPage (Was not needed)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ GolfingStats/GolfingStats.UWP/obj/
 GolfingStats/GolfingStats.UWP/bin/
 GolfingStats/GolfingStats.iOS/obj/
 GolfingStats/GolfingStats.iOS/bin/
+GolfingStats/GolfingStats/GolfingStats.csproj
