--- a/GolfingStats/GolfingStats.Android/GolfingStats.Android.csproj
+++ b/GolfingStats/GolfingStats.Android/GolfingStats.Android.csproj
@@ -67,6 +67,7 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="25.4.0.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MessageAndroid.cs" />
     <Compile Include="FileAccessHelper.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
