--- a/GolfingStats/GolfingStats.Android/GolfingStats.Android.csproj
+++ b/GolfingStats/GolfingStats.Android/GolfingStats.Android.csproj
@@ -44,6 +44,8 @@
     <AotAssemblies>false</AotAssemblies>
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
+    <EnableProguard>false</EnableProguard>
+    <AndroidSupportedAbis />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
