--- a/GolfingStats/GolfingStats/GolfingStats.csproj
+++ b/GolfingStats/GolfingStats/GolfingStats.csproj
@@ -48,6 +48,9 @@
     <EmbeddedResource Update="Pages\ShotPages\DriveDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\ShotPages\DropShotDetailsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\ShotPages\FairwayDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
