--- a/GolfingStats/GolfingStats.UWP/GolfingStats.UWP.csproj
+++ b/GolfingStats/GolfingStats.UWP/GolfingStats.UWP.csproj
@@ -149,6 +149,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
