Changed file names for easier management. Added Font Awesome

--- a/GolfingStats/GolfingStats.Android/GolfingStats.Android.csproj
+++ b/GolfingStats/GolfingStats.Android/GolfingStats.Android.csproj
@@ -81,6 +81,8 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\colors.xml" />
+    <AndroidAsset Include="Assets\FontAwesomeReg.ttf" />
+    <AndroidAsset Include="Assets\FontAwesomeSolid.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\drawable\splash.png" />
