--- a/GolfingStats/GolfingStats.iOS/GolfingStats.iOS.csproj
+++ b/GolfingStats/GolfingStats.iOS/GolfingStats.iOS.csproj
@@ -94,9 +94,13 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
-    <None Include="Info.plist" />
+    <None Include="Info.plist">
+      <SubType>Designer</SubType>
+    </None>
     <Compile Include="MessageIOS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <BundleResource Include="Resources\FontAwesomeReg.ttf" />
+    <BundleResource Include="Resources\FontAwesomeSolid.ttf" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
