--- a/GolfingStats/GolfingStats/GolfingStats.csproj
+++ b/GolfingStats/GolfingStats/GolfingStats.csproj
@@ -19,11 +19,20 @@
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="App.xaml.cs">
       <DependentUpon>*.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Pages\AddHolesPage.xaml.cs">
-      <DependentUpon>AddHolesPage.xaml</DependentUpon>
+    <Compile Update="Pages\CoursesPage.xaml.cs">
+      <DependentUpon>CoursesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Pages\CourseHolesPage.xaml.cs">
+      <DependentUpon>CourseHolesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Pages\RoundHolesPage.xaml.cs">
+      <DependentUpon>RoundHolesPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Pages\RoundDetailsPage.xaml.cs">
       <DependentUpon>RoundDetailsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Pages\ShotPages\ApproachDetailsPage.xaml.cs">
+      <DependentUpon>ApproachDetailsPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -31,10 +40,10 @@
     <EmbeddedResource Update="Controls\ShotModalNavBar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\AllCoursesPage.xaml">
+    <EmbeddedResource Update="Pages\CoursesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\HolesDetailsPage.xaml">
+    <EmbeddedResource Update="Pages\RoundHolesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\HomePage.xaml">
@@ -52,7 +61,7 @@
     <EmbeddedResource Update="Pages\ShotPages\DropShotDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\ShotPages\FairwayDetailsPage.xaml">
+    <EmbeddedResource Update="Pages\ShotPages\ApproachDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\ShotPages\PuttDetailsPage.xaml">
