--- a/GolfingStats/GolfingStats.iOS/GolfingStats.iOS.csproj
+++ b/GolfingStats/GolfingStats.iOS/GolfingStats.iOS.csproj
@@ -87,6 +87,9 @@
     <CodesignKey>iPhone Distribution</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
+    <AppExtensionDebugBundleId />
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="CustomCarouselPageRenderer.cs" />
     <Compile Include="CustomContentPageRenderer.cs" />
@@ -101,6 +104,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <BundleResource Include="Resources\FontAwesomeReg.ttf" />
     <BundleResource Include="Resources\FontAwesomeSolid.ttf" />
+    <ITunesArtwork Include="iTunesArtwork" />
+    <ITunesArtwork Include="iTunesArtwork%402x" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -144,5 +149,13 @@
       <Project>{3084B3A5-A26E-4AD1-8C2A-C2BFA222590D}</Project>
       <Name>GolfingStats</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Media.xcassets\LaunchImages.launchimage\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
   </ItemGroup>
 </Project>
