--- a/GolfingStats/GolfingStats.iOS/Info.plist
+++ b/GolfingStats/GolfingStats.iOS/Info.plist
@@ -10,7 +10,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
@@ -21,9 +21,9 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>10.3</string>
+	<string>11.3</string>
 	<key>CFBundleDisplayName</key>
-	<string>GolfingStats</string>
+	<string>Golfing Stats</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.yourcompany.GolfingStats</string>
 	<key>CFBundleVersion</key>
@@ -50,10 +50,14 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>GolfingStats</string>
-  <key>UIAppFonts</key>
-  <array>
-    <string>FontAwesomeSolid.ttf</string>
-    <string>FontAwesomeReg.ttf</string>
-  </array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FontAwesomeSolid.ttf</string>
+		<string>FontAwesomeReg.ttf</string>
+	</array>
+	<key>XSAppIconAssets</key>
+	<string>Resources/Media.xcassets/AppIcons.appiconset</string>
+	<key>XSLaunchImageAssets</key>
+	<string>Resources/Media.xcassets/LaunchImages.launchimage</string>
 </dict>
 </plist>
