--- a/GolfingStats/GolfingStats.iOS/Info.plist
+++ b/GolfingStats/GolfingStats.iOS/Info.plist
@@ -26,23 +26,6 @@
 	<string>com.GolfingStats</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-  <key>CFBundleIconFiles</key>
-  <array>
-    <string>Icon-20</string>
-    <string>Icon-60</string>
-    <string>Icon-60@2x</string>
-    <string>Icon-60@3x</string>
-    <string>Icon-76</string>
-    <string>Icon-76@2x</string>
-    <string>Icon-167</string>
-    <string>Icon-Small-40</string>
-    <string>Icon-Small-40@2x</string>
-    <string>Icon-Small-40@3x</string>
-    <string>Icon-Small</string>
-    <string>Icon-Small@2x</string>
-    <string>Icon-Small@3x</string>
-    <string>Icon-1024</string>
-  </array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -55,6 +38,6 @@
 		<string>FontAwesomeReg.ttf</string>
 	</array>
 	<key>XSAppIconAssets</key>
-	<string>Resources/Media.xcassets/AppIcons.appiconset</string>
+	<string>Media.xcassets/AppIcons.appiconset</string>
 </dict>
 </plist>
