--- a/GolfingStats/GolfingStats.iOS/Info.plist
+++ b/GolfingStats/GolfingStats.iOS/Info.plist
@@ -29,7 +29,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>GolfingStats</string>
+	<string>Golfing Stats</string>
 	<key>UIMainStoryboardFile</key>
 	<string>LaunchScreen</string>
 	<key>UIAppFonts</key>
@@ -39,5 +39,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Media.xcassets/AppIcons.appiconset</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0.3</string>
 </dict>
 </plist>
