--- a/GolfingStats/GolfingStats.iOS/GolfingStats.iOS.csproj
+++ b/GolfingStats/GolfingStats.iOS/GolfingStats.iOS.csproj
@@ -192,10 +192,18 @@
     <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-1024.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-20%402x.png" />
-    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-29%402x.png" />
-    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-40%402x.png" />
-    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-29.png" />
+    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-20%402x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-29%402x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-40%402x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Icon-29.png">
+      <Visible>false</Visible>
+    </ImageAsset>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Icon-1024.png" />
